# spinswift

./: .bash_aliases  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  Package.resolved  Package.swift  README.md  clean_zmb.sh
.github/: FUNDING.yml
.github/workflows/: linux.yml  macos.yml
Docker/: Dockerfile
Sources/: CMakeLists.txt
Sources/CGSL/: cgsl.h  module.modulemap
Sources/SpinSwift/: CMakeLists.txt  main.swift
Sources/SpinSwiftCore/: CMakeLists.txt  atom.swift  constants.swift  demagnetize.swift  fileManagement.swift  geometry.swift  hamiltonian.swift  linearAlgebra.swift  materials.swift  neighbors.swift  quantity.swift  region.swift  solver.swift  state.swift  system.swift
Sources/spinswift/: main.swift  nbody.swift
Sources/spinswift/core/: Analysis.swift  Atom.swift  Configuration.swift  Constants.swift  FileManagement.swift  GeneralSettings.swift  Integration.swift  Interaction.swift  LaserHeating.swift  LinearAlgebra.swift  PeriodicTable.swift  SimulationProgram.swift
Tests/: CMakeLists.txt
Tests/TestSpinSwiftCore/: CMakeLists.txt  TestSpinSwiftCore.swift
Tests/spinswiftTests/: spinswiftTests.swift
